# I.ConnecT

./: .gitignore  README.md  pyproject.toml
iconnect/accounts/: admin.py  forms.py  models.py  urls.py  views.py
iconnect/accounts/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_phone.py  0002_follow.py  0003_user_followers_delete_follow.py  0004_alter_user_followers.py  0005_rename_followers_user_following.py  0006_alter_user_following.py  0007_user_is_private.py
iconnect/config/: settings.py  urls.py  views.py
iconnect/posts/: admin.py  forms.py  models.py  urls.py  views.py
iconnect/posts/migrations/: 0001_initial.py  0002_alter_post_image.py  0002_postcomment.py  0003_alter_postcomment_options.py
static_src/css/: my_style.css
templates/: base.html
templates/accounts/: followers.html  following.html  subscribes.html  user_acc.html  user_profile_settings.html  users_search.html
templates/accounts/auth/: base_auth.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
templates/posts/: following_posts.html  post_archive.html  post_create_modal_form.html  post_update_form.html
